# open-reel

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.worker  README.md  pyproject.toml  setup.sh  start.sh
src/openreel/: __init__.py  config.py  exceptions.py  models.py  worker.py
src/openreel/api/: app.py  dependencies.py  routes.py
src/openreel/api/frontend/: index.html
src/openreel/cli/: app.py
src/openreel/core/: analyzer.py  captioner.py  chunking.py  deduplicator.py  extractor.py  pipeline.py  profanity.py  renderer.py  subtitle_renderer.py  transcriber.py  video_info.py
tests/: conftest.py
