[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openreel"
version = "0.1.0"
description = "Automatically identify and extract highlight clips from long stream recordings using Google Gemini"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.11"
authors = [
    { name = "Austin" },
]
keywords = ["streaming", "highlights", "clips", "gemini", "ffmpeg", "video"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "google-genai>=1.0",
    "google-cloud-storage>=2.14",
    "supabase>=2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "typer>=0.12",
    "rich>=13.0",
    "tenacity>=8.0",
]

[project.optional-dependencies]
captions = [
    "faster-whisper>=1.0",
    "Pillow>=10.0",
]
diarize = [
    "faster-whisper>=1.0",
    "Pillow>=10.0",
    "pyannote.audio>=3.1",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.3",
]

[project.scripts]
openreel = "openreel.cli.app:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["N806"]

[tool.ruff.lint.per-file-ignores]
"src/openreel/core/analyzer.py" = ["E501"]
"src/openreel/core/subtitle_renderer.py" = ["E501"]
"src/openreel/config.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
